Link back to website.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="wrap">
 <div id="section">
     <div id="logo">
-        <span>{{> svg-logo_font_w }}</span>
+        <a href="{{🎨.website}}">{{> svg-logo_font_w }}</a>
         <span id="ext">{{🎨.ext}}</span>
     </div>
 
