Spacing and mobile tweaks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="navbar-brand">
             <a href="https://stacklane.com" class="navbar-item logo">{{>logo-sl_full}}</a>
-            <span class="has-text-weight-semibold navbar-item">Status</span>
+            <span class="navbar-item">Status</span>
         </div>
     </div>
 </nav>
