Change var name

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </main>
 
 <footer class="container">
-    &copy; Stacklane, Inc. {{🎨.startYear}}-{{🎨.year}}. All rights reserved.
+    &copy; Stacklane, Inc. {{🎨.start-year}}-{{🎨.year}}. All rights reserved.
 </footer>
 
 <script type="text/javascript">
