--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="columns is-mobile">
                     <div class="column">
                         <div class="title is-size-6">United States</div>
-                        <div class="subtitle is-size-7">Endpoint delivery for US-1, US-2, and US data storage.</div>
+                        <div class="subtitle is-size-7">Endpoint delivery for US-1, and US data storage.</div>
                     </div>
                     <div id="component-us" class="column has-text-right"></div>
                 </div>
