--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <link href="/style/theme.scss" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/fav/16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/fav/32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/fav/192.png" sizes="192x192" />
 </head>
 
 <body>
@@ -21,7 +22,7 @@
 <nav id="nav" class="navbar is-spaced is-fixed-top" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
-            <a href="https://stacklane.com" class="navbar-item logo">{{>logo-sl_full}}</a>
+            <a href="https://stacklane.com" class="navbar-item logo">{{>logo-logo-and-text-mono}}</a>
             <span class="navbar-item">Status</span>
         </div>
     </div>
