--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<nav id="nav" class="navbar is-spaced is-fixed-top" role="navigation" aria-label="main navigation">
+<nav id="nav" class="navbar is-spaced" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
             <a href="https://stacklane.com" class="navbar-item logo">{{>logo-logo-and-text-mono}}</a>
