--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <nav id="nav" class="navbar is-spaced" role="navigation" aria-label="main navigation">
     <div class="container">
         <div class="navbar-brand">
-            <a href="https://stacklane.com" class="navbar-item logo">{{>logo-logo-and-text-mono}}</a>
+            <a href="https://stacklane.com" class="navbar-item logo">{{>logo-logo-and-text-color}}</a>
             <span class="navbar-item">Status</span>
         </div>
     </div>
