--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </main>
 
 <footer class="container">
-    &copy; Stacklane, Inc. {{🎨.start-year}}-{{🎨.year}}. All rights reserved.
+    &copy; Stacklane, Inc. {{🎨.start-year}}-{{%year}}
 </footer>
 
 <script type="text/javascript">
